packages/legend-extension-dsl-data-space/style/_data-space-viewer.scss
/**
 * Copyright (c) 2020-present, Goldman Sachs
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use 'mixins' as *;

.data-space__viewer {
  height: 100%;
  width: 100%;
  position: relative;
  font-family: Roboto, sans-serif;

  &__header {
    @include flexHCenter;

    position: absolute;
    top: 0;
    height: 9rem;
    width: 100%;
    z-index: 1;
    background: transparent;
    transition: all 0.5s ease;

    &--floating {
      background: var(--color-dark-grey-85);
      box-shadow: var(--color-dark-shade-280) 0 0 0.5rem 0;
      z-index: 10;
    }

    &__content {
      display: flex;
      justify-content: space-between;
      width: min(140rem, 80vw);
      min-width: 80rem;
      padding: 2rem 8rem;
    }

    &__content--expanded {
      width: 80vw;
    }

    &__title {
      @include flexCenter;

      height: 5rem;
      border-radius: 0.5rem;
      padding: 0 3rem;
      user-select: none;
      background: var(--color-blue-200);
      max-width: 50vw;

      &__label {
        @include ellipsisTextOverflow;

        font-size: 2.4rem;
        font-weight: 500;
        color: var(--color-light-grey-0);
      }

      &__verified-badge {
        @include flexCenter;

        margin-left: 1rem;
        width: 3rem;

        svg {
          font-size: 2.4rem;
          color: var(--color-light-grey-0);
        }
      }
    }

    &__actions {
      @include flexVCenter;

      height: 3.8rem;
      background: var(--color-dark-grey-200);
      border: 0.1rem solid var(--color-dark-grey-250);
      border-radius: 0.2rem;
      padding-left: 0.5rem;
    }

    &__execution-context-selector {
      width: 20rem;

      &__trigger {
        @include flexVCenter;

        height: 100%;

        &__icon {
          @include flexCenter;

          height: 2.8rem;
          width: 2.8rem;
          border-right: 0.1rem solid var(--color-dark-grey-280);

          svg {
            color: var(--color-dark-grey-300);
          }
        }

        &__label {
          @include ellipsisTextOverflow;

          width: 15rem;
          height: 100%;
          line-height: 3.8rem;
          padding: 0 1rem;
          color: var(--color-light-grey-300);
        }

        &__dropdown-icon {
          @include flexCenter;

          width: 2.2rem;
          height: 100%;

          svg {
            color: var(--color-dark-grey-300);
          }
        }
      }

      &__option {
        width: 17.2rem;
      }

      &__option--active {
        background: var(--color-dark-grey-250);
      }
    }

    &__actions-selector {
      @include flexCenter;

      width: 3.8rem;
      height: 3.8rem;
      border-left: 0.1rem solid var(--color-dark-grey-250);

      svg {
        font-size: 1.6rem;
        color: var(--color-dark-grey-400);
      }

      &:hover svg {
        color: var(--color-light-grey-400);
      }
    }
  }

  &__body {
    display: flex;
    align-items: center;
    flex-direction: column;
    height: 100%;
    width: 100%;
    overflow: auto;
  }

  &__frame {
    display: flex;
    width: min(140rem, 80vw);
    min-width: 80rem;
    height: 100%;
    padding: 4rem;
    position: relative;
  }

  &__frame--expanded {
    width: 80vw;
  }

  &__frame--boundless {
    height: initial;
  }

  &__content {
    display: flex;
    width: 100%;
    padding: 4rem;
    box-shadow: var(--color-dark-shade-280) 0 0.1rem 0.5rem 0;
  }
}

.data-space__viewer__panel {
  height: 100%;
  width: 100%;
  overflow: auto;
  padding: 2rem 0;

  &__header {
    @include flexVCenter;

    border-bottom: 0.2rem solid var(--color-blue-100);
    user-select: none;
    color: var(--color-blue-100);
    margin-bottom: 2rem;

    &__label {
      @include flexVCenter;

      font-size: 2.4rem;
      text-transform: uppercase;
      font-weight: 500;
    }
  }

  &__content__placeholder {
    line-height: 2.8rem;
    color: var(--color-dark-grey-300);
    user-select: none;
    font-style: italic;

    svg {
      font-size: 1rem;
      color: var(--color-blue-100);
    }
  }
}
/* ... */

